# atomig

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
atomig-macro/: Cargo.toml
atomig-macro/src/: lib.rs
ci/: check-basic-style.sh
examples/: custom_type.rs  main.rs  simple.rs
src/: impls.rs  lib.rs  tests.rs
