[package]
name = "atomig"
version = "0.1.0"
authors = ["Lukas Kalbertodt <lukas.kalbertodt@gmail.com>"]
edition = "2018"

[features]
derive = ["atomig-macro"]

[dependencies]
atomig-macro = { path = "atomig-macro", optional = true }

[package.metadata.docs.rs]
all-features = true


[[example]]
name = "custom_type"
required-features = ["derive"]
