[package]
name = "atomig"
version = "0.3.3"
authors = ["Lukas Kalbertodt <lukas.kalbertodt@gmail.com>"]
edition = "2018"

description = """
Generic and convenient `std` atomics via `Atomic<T>`. Can be used with many
primitive types (including floats) and with custom types.
"""
documentation = "https://docs.rs/atomig/"
repository = "https://github.com/LukasKalbertodt/atomig/"
readme = "README.md"
license = "MIT/Apache-2.0"

keywords = ["atomic", "atom", "ordering", "cas", "generic"]
categories = ["concurrency", "hardware-support", "no-std"]

[badges]
travis-ci = { repository = "LukasKalbertodt/atomig" }


[features]
atomic_ptr = []
atomic_8 = ["atomic_ptr"]
atomic_16 = ["atomic_8"]
atomic_32 = ["atomic_16"]
atomic_64 = ["atomic_32"]
atomic_cas_ptr = ["atomic_ptr"]
atomic_cas_8 = ["atomic_cas_ptr", "atomic_8"]
atomic_cas_16 = ["atomic_cas_8", "atomic_16"]
atomic_cas_32 = ["atomic_cas_16", "atomic_32"]
atomic_cas_64 = ["atomic_cas_32", "atomic_64"]
default = ["atomic_cas_64"]
derive = ["atomig-macro"]

[dependencies]
atomig-macro = { version = "0.2.0", path = "atomig-macro", optional = true }
serde = { version = "1", default-features = false, optional = true }

[dev-dependencies]
bincode = { version = "1" }

[package.metadata.docs.rs]
all-features = true


[[example]]
name = "custom_type"
required-features = ["derive"]
