[package]
name = "atomig"
version = "0.4.2"
authors = ["Lukas Kalbertodt <lukas.kalbertodt@gmail.com>"]
edition = "2021"

description = """
Generic, convenient and lock-free `std` atomics via `Atomic<T>`. Can be used
with many primitive types (including floats) and with custom types.
"""
documentation = "https://docs.rs/atomig/"
repository = "https://github.com/LukasKalbertodt/atomig/"
readme = "README.md"
license = "MIT/Apache-2.0"

keywords = ["atomic", "atom", "ordering", "cas", "generic"]
categories = ["concurrency", "hardware-support", "no-std"]


[features]
derive = ["atomig-macro"]

[dependencies]
atomig-macro = { version = "=0.3.0", path = "atomig-macro", optional = true }
serde = { version = "1", default-features = false, optional = true }

[dev-dependencies]
bincode = { version = "1" }

[package.metadata.docs.rs]
all-features = true


[[example]]
name = "custom_type"
required-features = ["derive"]
