[package]
name = "atomig-macro"
version = "0.2.0"
authors = ["Lukas Kalbertodt <lukas.kalbertodt@gmail.com>"]
edition = "2018"

description = """
Defines procedural macros for the crate `atomig`. Please see the main crate.
"""
repository = "https://github.com/LukasKalbertodt/atomig/"
license = "MIT/Apache-2.0"


[lib]
proc-macro = true

[dependencies]
syn = "1.0.91"
quote = "1.0.17"
proc-macro2 = "1.0.37"
